--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style/style.css" media="screen">
 </head>
 <body>
-<div class="container"></div>
+    <div class="container">
+        <div class="grid" id="ship-board"></div>
+        <div class="grid"></div>
+    </div>
+
 </body>
 </html>
