--- a/index.html
+++ b/index.html
@@ -3,14 +3,37 @@
 <head>
     <meta charset="utf-8">
     <title>BattleShip - game</title>
-    <script src="scripts/App.js" defer></script>
     <link rel="stylesheet" href="style/style.css" media="screen">
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-auth.js"></script>
+
+
+
+
+
 </head>
 <body>
     <div class="container">
         <div class="grid" id="ship-board"></div>
         <div class="grid"></div>
     </div>
+
+    <script>
+        let firebaseConfig = {
+            apiKey: "AIzaSyAVggAA9N-LVNqxRWakfDJMKeSY5a_u6FE",
+            authDomain: "battleshipjs.firebaseapp.com",
+            databaseURL: "https://battleshipjs.firebaseio.com",
+            projectId: "battleshipjs",
+            storageBucket: "",
+            messagingSenderId: "6989014295",
+            appId: "1:6989014295:web:db8daa7b8d36d6ed"
+        };
+        firebase.initializeApp(firebaseConfig);
+        let db = firebase.firestore();
+        // db.settings({timestampsInSnapshots: true});
+    </script>
+    <script src="scripts/App.js"></script>
 
 </body>
 </html>
