--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div id="loader">
-            <h2>Waiting for opponent</h2>
+            <h2 id="loaderh2">Waiting for opponent</h2>
         </div>
         <div class="grid" id="ship-board"></div>
         <div class="grid"></div>
