Add another board for player shoots

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="loader">
         </div>
         <div class="grid" id="ship-board"></div>
-        <div class="grid"></div>
+        <div class="grid" id="shoot-board"></div>
     </div>
 
     <script>
