--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 </head>
 <body>
     <div class="container">
-        <h2 id="loaderh2">Waiting for opponent</h2>
-        <div id="loader">
+        <div class="loader-box">
+            <h2 id="loaderh2">Waiting for opponent</h2>
+            <div id="loader">
+        </div>
         </div>
         <div class="grid" id="ship-board"></div>
         <div class="grid" id="shoot-board"></div>
