Add loader box when player wait for second player turn

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="loader-box">
-            <h2 id="loaderh2">Waiting for opponent</h2>
-            <div id="loader">
+        <div id="modal" class="popup">
+            <div class="loader-box popup-contnet">
+                <h2 id="loaderh2">Waiting for opponent</h2>
+                <div id="loader"></div>
+            </div>
         </div>
-        </div>
+
         <div class="grid" id="ship-board"></div>
         <div class="grid" id="shoot-board"></div>
     </div>
