--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <div class="container">
         <div id="modal" class="popup">
             <div class="loader-box popup-contnet">
-                <h2 id="loaderh2">Waiting for opponent</h2>
+                <h2 id="loaderh2">Waiting for opponent...</h2>
                 <div id="loader"></div>
             </div>
         </div>
-
-        <div class="grid" id="ship-board"></div>
         <div class="grid" id="shoot-board"></div>
+        <div class="grid" id="ship-board"></div>
     </div>
 
     <script>
