--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         let db = firebase.firestore();
         // db.settings({timestampsInSnapshots: true});
     </script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/htmlOperations.js"></script>
+    <script src="scripts/addShips.js"></script>
     <script src="scripts/App.js"></script>
 
 </body>
