--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-auth.js"></script>
-
-
-
-
-
+    <script src="scripts/firebaseConfig.js"></script>
+    <script src="scripts/matchmaking.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/htmlOperations.js"></script>
+    <script src="scripts/addShips.js"></script>
+    <script src="scripts/App.js"></script>
 </head>
 <body>
     <div class="container">
@@ -25,24 +26,6 @@
         <div class="grid" id="ship-board"></div>
     </div>
 
-    <script>
-        let firebaseConfig = {
-            apiKey: "AIzaSyAVggAA9N-LVNqxRWakfDJMKeSY5a_u6FE",
-            authDomain: "battleshipjs.firebaseapp.com",
-            databaseURL: "https://battleshipjs.firebaseio.com",
-            projectId: "battleshipjs",
-            storageBucket: "",
-            messagingSenderId: "6989014295",
-            appId: "1:6989014295:web:db8daa7b8d36d6ed"
-        };
-        firebase.initializeApp(firebaseConfig);
-        let db = firebase.firestore();
-        // db.settings({timestampsInSnapshots: true});
-    </script>
-    <script src="scripts/main.js"></script>
-    <script src="scripts/htmlOperations.js"></script>
-    <script src="scripts/addShips.js"></script>
-    <script src="scripts/App.js"></script>
-
+    
 </body>
 </html>
