Fix display for mobile devices

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>BattleShip - game</title>
     <link rel="stylesheet" href="style/style.css" media="screen">
     <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"></script>
