--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>BattleShip - game</title>
+    <meta content="width=device-width; initial-scale=1.0;" name="viewport" />
     <link rel="stylesheet" href="style/style.css" media="screen">
-    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-auth.js"></script>
-    <script src="scripts/firebaseConfig.js"></script>
-    <script src="scripts/matchmaking.js"></script>
-    <script src="scripts/main.js"></script>
-    <script src="scripts/htmlOperations.js"></script>
-    <script src="scripts/addShips.js"></script>
-    <script src="scripts/App.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-firestore.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-auth.js" defer></script>
+    <script src="scripts/firebaseConfig.js" defer></script>
+    <script src="scripts/matchmaking.js" defer></script>
+    <script src="scripts/main.js" defer></script>
+    <script src="scripts/htmlOperations.js" defer></script>
+    <script src="scripts/addShips.js" defer></script>
+    <script src="scripts/App.js" defer></script>
 </head>
 <body>
     <div class="container">
